--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,6 +1,8 @@
 indent_type = "Spaces"
 indent_width = 2
 column_width = 110
+quote_style = "AutoPreferDouble"
+call_parentheses = "NoSingleTable"
 
 [sort_requires]
 enabled = true
