--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,4 +1,5 @@
 call_parentheses = "NoSingleTable"
+collapse_simple_statement = "Always"
 column_width = 120
 indent_type = "Spaces"
 indent_width = 2
