--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -33,6 +33,6 @@ jobs:
       - name: Installing dependencies
         run: |
           git config --global core.compression 0
-          git clone https://github.com/echasnovski/mini.test .tests/repos/mini.test
+          git clone https://github.com/nvim-mini/mini.test .tests/repos/mini.test
       - name: Running tests
         run: make test
