refactor!: Restructure codebase for better DX
- Remove heavy dependencies to `async` module
- Separate view and popups logic
- Unified structure for file tree

--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,4 +1,4 @@
-call_parentheses = "NoSingleTable"
+call_parentheses = "None"
 collapse_simple_statement = "Always"
 column_width = 120
 indent_type = "Spaces"
