--- a/.stylua.toml
+++ b/.stylua.toml
@@ -3,6 +3,8 @@ column_width = 120
 indent_type = "Spaces"
 indent_width = 2
 quote_style = "AutoPreferDouble"
+syntax = "LuaJIT"
+line_endings = "Unix"
 
 [sort_requires]
 enabled = true
