chore(github): Include branch and OS requirements in bug report

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -10,6 +10,27 @@ body:
       options:
         - label: I have updated 'fyler.nvim' to latest version of the `main` branch
           required: true
+  - type: dropdown
+    id: branch
+    attributes:
+      label: "Branch"
+      description: "Choose branch in which you encounter this bug"
+      options:
+        - main
+        - stable
+    validations:
+      required: true
+  - type: dropdown
+    id: os
+    attributes:
+      label: "OS"
+      description: "Choose your OS"
+      options:
+        - Linux
+        - MacOS
+        - Windows
+    validations:
+      required: true
   - type: input
     id: nvim-version
     attributes:
