perf(fs): Refactor blocking module to non-blocking

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           version: latest
-          args: --color always --check lua/ tests/
+          args: --color always --check lua/
   lint:
     name: Linting
     runs-on: ubuntu-latest
