--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -1,7 +1,7 @@
 name: Feature request
 description: Describe a feature you would like to see
 title: "[FEAT] "
-labels: [feature-request]
+labels: [feature request]
 body:
   - type: textarea
     id: description
